--- a/EpidemicSimulation.csproj
+++ b/EpidemicSimulation.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="System.Windows.Forms" Version="4.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\ui\" />
