Simulation parameters normalisation, naming improvements, hyperinfectivity bug fix

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ bin/*.exe
 *.user
 *.userosscache
 *.sln.docstates
+settings.json
+.vscode/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
